<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/font_size">
        <menu>
            <item
                android:id="@+id/font_small"
                android:title="@string/font_10"/>
            <item
                android:id="@+id/font_middle"
                android:title="@string/font_16"/>
            <item
                android:id="@+id/font_big"
                android:title="@string/font_20"/>
        </menu>

    </item>
    <item
        android:title="@string/normal_button"
        android:id="@+id/normal"
        >
    </item>
    <item android:title="@string/font_color">
        <menu>
            <item
                android:id="@+id/color_red"
                android:title="@string/color_red" />
            <item
                android:id="@+id/color_black"
                android:title="@string/color_black"/>
        </menu>
    </item>
</menu>
